--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "samlify",
-  "version": "2.8.11",
+  "name": "@tapni/samlify",
+  "version": "2.8.12",
   "description": "High-level API for Single Sign On (SAML 2.0)",
   "main": "build/index.js",
   "keywords": [
